src/test/deca/context/valid/provided/test_asm.deca
class A {
 void func() 
 asm("
        load -1(lb), r0  ; x
        load -2(lb), r1  ; y
    ");

}
