src/test/deca/context/invalid/provided/testi20.deca
class A{}
{
    float x;
    A a = new A();
    a = (A)(x);
}